# follower

catkin_ws/: melodic-custom-ros.rosinstall
catkin_ws/devel/include/lidar/: PolygonArray.h
catkin_ws/devel/lib/control/: control
catkin_ws/devel/lib/example/: publish_subscribe
catkin_ws/devel/lib/learning_joy/: turtle_teleop_joy
catkin_ws/devel/lib/pkgconfig/: ackermann_cmd_mux.pc  control.pc  example.pc  learning_joy.pc  lidar.pc
catkin_ws/devel/lib/python2.7/dist-packages/lidar/msg/: _PolygonArray.py
catkin_ws/devel/lib/rplidar_ros/: rplidarNode  rplidarNodeClient
catkin_ws/devel/share/ackermann_cmd_mux/cmake/: ackermann_cmd_muxConfig.cmake
catkin_ws/devel/share/common-lisp/ros/lidar/msg/: PolygonArray.lisp  _package.lisp  _package_PolygonArray.lisp  lidar-msg.asd
catkin_ws/devel/share/control/cmake/: controlConfig.cmake
catkin_ws/devel/share/example/cmake/: exampleConfig.cmake
catkin_ws/devel/share/gennodejs/ros/lidar/msg/: PolygonArray.js
catkin_ws/devel/share/learning_joy/cmake/: learning_joyConfig.cmake
catkin_ws/devel/share/lidar/cmake/: lidar-msg-extras.cmake  lidar-msg-paths.cmake  lidarConfig.cmake
catkin_ws/devel/share/roseus/ros/lidar/: manifest.l
catkin_ws/devel/share/roseus/ros/lidar/msg/: PolygonArray.l
catkin_ws/src/control/: CMakeLists.txt  blink_smooth.py  package.xml
catkin_ws/src/control/config/: joy_teleop.yaml
catkin_ws/src/control/launch/: joy.launch  joy_teleop.launch.xml  publish_subscribe.launch  teleop.launch
catkin_ws/src/control/scripts/: control.py  drive_only.py  dummy_node.py  follow_control.py  joy_teleop.py  params.py  pure_pursuit.py  steer_only.py  teleop_control.py
catkin_ws/src/example/: CMakeLists.txt  package.xml
catkin_ws/src/example/launch/: publish_subscribe.launch
catkin_ws/src/learning_joy/: CMakeLists.txt  package.xml
catkin_ws/src/learning_joy/src/: turtle_teleop_joy.cpp
catkin_ws/src/lidar/: CMakeLists.txt  package.xml
catkin_ws/src/lidar/launch/: convex_hull.launch  convex_hull.xml  follow_vehicle.launch  tracker.launch
catkin_ws/src/lidar/msg/: PolygonArray.msg
catkin_ws/src/lidar/scripts/: convert.py  lidar_process.py  occupancy.py  tracker.py
catkin_ws/src/lidar/src/: publish_subscribe.cpp
